--- a/index.html
+++ b/index.html
@@ -9,124 +9,23 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+            <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>livros</h3>
+                    <h3>Livros</h3>
                     <div class="cartao__conteudo__pergunta">
-                        Qual o livro mais vendido pela Collen Hoover?
+                        <p>Qual o livro mais vendido de Collen Hoover?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        É assim que acaba
+                        <p>É assim que acaba</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual autor com mais relevância na atualidade?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        J.K Rowling
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual foi a melhor adaptação de livro para filme?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    Senhor dos anéis
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual o livro mais longo do mundo?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        Em busca do tempo perdido
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual a escritora com mais livros vendidos na atualidade?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        Collen Hoover
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual o livro mais antigo do mundo?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                       A bíblia em latim 
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual o livro mais vendido da Ali Hazelwood?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        Hipotese do amor
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual o autor brasileiro com mais livros traduzidos no mundo?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        Paulo Coelho, com o livro anarquista
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual adaptação vai para o cinema em 2025?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        A casa dos espíritos
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual a adaptação com melhor bilheteria?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                       Avatar
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual o livro mais lido por adolescentes?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                       A saga Harry Potter
-                    </div>
-                    <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>livros</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       Qual o livro mais lido no mundo?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        A bíblia sagrada
-                    </div>
-                </div>
-            </article>
+            </article> -->
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido por Gabrielle e Camila, sem fins lucrativos</p>
+        <p>Projeto desenvolvido por Camila e Gabrielle, sem fins lucrativos.</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
